Третья верстка страницы "Одного обьявления"

--- a/www/flea-market.html
+++ b/www/flea-market.html
@@ -34,7 +34,6 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Clamp.js/0.5.1/clamp.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
@@ -123,7 +122,6 @@
 
                     <div class="b-ad__item-info-top">
                       <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
-                      <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima excepturi officiis, velit explicabo obcaecati ex necessitatibus a omnis illo consequuntur eveniet ullam, officia odit, itaque minus eaque harum porro quod.</p>
                     </div>
 
                     <div class="b-ad__item-info-bottom">
@@ -134,10 +132,10 @@
                       <p class="b-ad__item-info-city text">Kyiv</p>
                       </div>
                   </div>
-                  <p class="b-ad__item-price text">
+                  <div class="b-ad__item-price text">
                     <span>20</span> <span>$</span>
-                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
-                  </p>
+                  </div>
+                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
                 </div>
 
                 <div class="b-ad__item item" data-top-item>
@@ -147,22 +145,20 @@
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
                       <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
-                      <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima excepturi officiis, velit explicabo obcaecati ex necessitatibus a omnis illo consequuntur eveniet ullam, officia odit, itaque minus eaque harum porro quod.</p>
                     </div>
                     <div class="b-ad__item-info-bottom">
                       <p class="wrap-tags">
                         <a href="#" class="text subtext tag">Колеса</a>
                         <a href="#" class="text subtext tag">диски</a>
                         <a href="#" class="text subtext tag">фары</a>
-                        <a href="#" class="text subtext tag">фары</a>
                       </p>
                       <p class="b-ad__item-info-city text">Athens</p>
                       </div>
                   </div>
-                  <p class="b-ad__item-price text">
+                  <div class="b-ad__item-price text">
                     <span>200</span> <span>$</span>
-                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
-                  </p>
+                  </div>
+                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
                 </div>
 
                 <div class="b-ad__item item">
@@ -172,7 +168,6 @@
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
                       <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
-                      <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima excepturi officiis, velit explicabo obcaecati ex necessitatibus a omnis illo consequuntur eveniet ullam, officia odit, itaque minus eaque harum porro quod.</p>
                     </div>
                     <div class="b-ad__item-info-bottom">
                       <p class="wrap-tags">
@@ -181,10 +176,10 @@
                       <p class="b-ad__item-info-city text">Kyiv</p>
                       </div>
                   </div>
-                  <p class="b-ad__item-price text">
+                  <div class="b-ad__item-price text">
                     <span>5</span> <span>$</span>
-                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
-                  </p>
+                  </div>
+                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
                 </div>
 
                 <div class="b-ad__item item">
@@ -194,7 +189,6 @@
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
                       <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
-                      <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima excepturi officiis, velit explicabo obcaecati ex necessitatibus a omnis illo consequuntur eveniet ullam, officia odit, itaque minus eaque harum porro quod.</p>
                     </div>
                     <div class="b-ad__item-info-bottom">
                       <p class="wrap-tags">
@@ -205,10 +199,10 @@
                       <p class="b-ad__item-info-city text">Athens</p>
                       </div>
                   </div>
-                  <p class="b-ad__item-price text">
+                  <div class="b-ad__item-price text">
                     <span>2000</span> <span>$</span>
-                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
-                  </p>
+                  </div>
+                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
                 </div>
 
                 <div class="b-ad__item item">
@@ -218,7 +212,6 @@
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
                       <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
-                      <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima excepturi officiis, velit explicabo obcaecati ex necessitatibus a omnis illo consequuntur eveniet ullam, officia odit, itaque minus eaque harum porro quod.</p>
                     </div>
                     <div class="b-ad__item-info-bottom">
                       <p class="wrap-tags">
@@ -229,10 +222,10 @@
                       <p class="b-ad__item-info-city text">Barcelonaaaaaa</p>
                       </div>
                   </div>
-                  <p class="b-ad__item-price text">
+                  <div class="b-ad__item-price text">
                     <span>300</span> <span>$</span>
-                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
-                  </p>
+                  </div>
+                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
                 </div>
 
                 <div class="b-ad__item item">
@@ -242,7 +235,6 @@
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
                       <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. mollitia.</a></h5>
-                      <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima excepturi officiis, velit explicabo obcaecati ex necessitatibus a omnis illo consequuntur eveniet ullam, officia odit, itaque minus eaque harum porro quod.</p>
                     </div>
                     <div class="b-ad__item-info-bottom">
                       <p class="wrap-tags">
@@ -252,10 +244,10 @@
                       <p class="b-ad__item-info-city text">Barcelona</p>
                       </div>
                   </div>
-                  <p class="b-ad__item-price text">
+                  <div class="b-ad__item-price text">
                     <span>1500</span> <span>$</span>
-                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
-                  </p>
+                  </div>
+                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
                 </div>
 
                 <div class="b-ad__item item">
@@ -265,7 +257,6 @@
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
                       <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum</a></h5>
-                      <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima excepturi officiis, velit explicabo obcaecati ex necessitatibus a omnis illo consequuntur eveniet ullam, officia odit, itaque minus eaque harum porro quod.</p>
                     </div>
                     <div class="b-ad__item-info-bottom">
                       <p class="wrap-tags">
@@ -276,10 +267,10 @@
                       <p class="b-ad__item-info-city text">Athens</p>
                       </div>
                   </div>
-                  <p class="b-ad__item-price text">
+                  <div class="b-ad__item-price text">
                     <span>2050</span> <span>$</span>
-                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
-                  </p>
+                  </div>
+                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
                 </div>
                 <div class="b-ad__item item">
                   <div class="b-ad__item-img">
@@ -288,7 +279,6 @@
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
                       <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h5>
-                      <p class="text" data-clamp>Consequuntur eveniet ullam, officia odit, itaque minus eaque harum porro quod.</p>
                     </div>
                     <div class="b-ad__item-info-bottom">
                       <p class="wrap-tags">
@@ -297,10 +287,10 @@
                       <p class="b-ad__item-info-city text">Kyiv</p>
                       </div>
                   </div>
-                  <p class="b-ad__item-price text">
+                  <div class="b-ad__item-price text">
                     <span>5</span> <span>$</span>
-                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
-                  </p>
+                  </div>
+                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
                 </div>
 
                 <div class="b-ad__item item">
@@ -310,7 +300,6 @@
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
                       <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet</a></h5>
-                      <p class="text" data-clamp>Minima excepturi officiis</p>
                     </div>
                     <div class="b-ad__item-info-bottom">
                       <p class="wrap-tags">
@@ -323,10 +312,10 @@
                       <p class="b-ad__item-info-city text">Kyiv</p>
                       </div>
                   </div>
-                  <p class="b-ad__item-price text">
+                  <div class="b-ad__item-price text">
                     <span>20000</span> <span>$</span>
-                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
-                  </p>
+                  </div>
+                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
                 </div>
 
                 <div class="b-ad__item item">
@@ -336,7 +325,6 @@
                   <div class="b-ad__item-info">
                     <div class="b-ad__item-info-top">
                       <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
-                      <p class="text" data-clamp>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima excepturi officiis, velit explicabo obcaecati ex necessitatibus a omnis illo consequuntur eveniet ullam, officia odit, itaque minus eaque harum porro quod.</p>
                     </div>
                     <div class="b-ad__item-info-bottom">
                       <p class="wrap-tags">
@@ -347,17 +335,17 @@
                       <p class="b-ad__item-info-city text">Barcelonaaaaaa</p>
                       </div>
                   </div>
-                  <p class="b-ad__item-price text">
+                  <div class="b-ad__item-price text">
                     <span>300</span> <span>$</span>
-                    <span class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></span>
-                  </p>
+                  </div>
+                  <p class="b-ad__item-fav" data-message="" data-add-message="Добавлено в избранное" data-remove-message="Удалено из избранного"></p>
                 </div>
 
                 <!-- 
                   Скрыть кнопку переключения класс .m-pagination_hide;
                   Текущая страница пагинации класс .m-pagination-item_current;
                 -->
-
+              </div>
               <div class="b-pagination controll">
                 <span class="b-pagination-item item text m-pagination_prev m-pagination_hide"><<</span>
                 <span class="b-pagination-item item text m-pagination-item_current">1</span>
@@ -384,7 +372,7 @@
                 <form class="b-filter__form" name="filter">
                   <div class="b-filter__form-item droplist">
                     <input type="text" id="sector" value="all" hidden>
-                    <span class="droplist-current text bold tab-input">Наименование товара</span>
+                    <span class="droplist-current text bold tab-input">Категории</span>
                     <ul class="droplist-block">
                       <li class="droplist-item text">Колесо</li>
                       <li class="droplist-item text">Авто</li>
