--- a/www/main.html
+++ b/www/main.html
@@ -32,6 +32,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Detect.js/2.2.2/detect.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Clamp.js/0.5.1/clamp.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
@@ -177,42 +178,42 @@
                     <div data-name="Блоги">
                       <img src="img/temp/auto/2.jpg" alt="" class="b-news__inner-item-img">
                     </div>
-                    <a href="#" class="text">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
+                    <a href="#" class="text" data-clamp>Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                   </div>
 
                   <div class="b-news__inner-item m-news__inner-item_news-market">
                     <div data-name="Новости рынка">
                       <img src="img/temp/img-previous-1.jpg" alt="" class="b-news__inner-item-img">
                     </div>
-                    <a href="#" class="text">Онлайн-журнал: Полиция и ГФС начинают охоту на «польские бляхи». Тест-драйв электромобиля BMW i3.</a>
+                    <a href="#" class="text" data-clamp>Онлайн-журнал: Полиция и ГФС начинают охоту на «польские бляхи». Тест-драйв электромобиля BMW i3.</a>
                   </div>
 
                   <div class="b-news__inner-item m-news__inner-item_company">
                     <div data-name="Новости рынка">
                       <img src="img/temp/e5ac4aes-480.jpg" alt="" class="b-news__inner-item-img">
                     </div>
-                    <a href="#" class="text">Наш опыт восстановления  по оригинальным чертежам</a>
+                    <a href="#" class="text" data-clamp>Наш опыт восстановления  по оригинальным чертежам</a>
                   </div>
 
                   <div class="b-news__inner-item m-news__inner-item_news-market">
                     <div data-name="Новости рынка">
                       <img src="img/temp/img-previous-1.jpg" alt="" class="b-news__inner-item-img">
                     </div>
-                    <a href="#" class="text">В париже представлен новый Mitsubishi L200</a>
+                    <a href="#" class="text" data-clamp>В париже представлен новый Mitsubishi L200</a>
                   </div>
 
                   <div class="b-news__inner-item m-news__inner-item_blog">
                     <div data-name="Блоги">
                       <img src="img/temp/725c0c2s-960.jpg" alt="" class="b-news__inner-item-img">
                     </div>
-                    <a href="#" class="text">Как научить Рено Дастер плавать</a>
+                    <a href="#" class="text" data-clamp>Как научить Рено Дастер плавать</a>
                   </div>
 
                   <div class="b-news__inner-item m-news__inner-item_blog">
                     <div data-name="Блоги">
                       <img src="img/temp/img-previous-2.jpg" alt="" class="b-news__inner-item-img">
                     </div>
-                    <a href="#" class="text">Обновленную Skoda Octavia наделили «кристальным взглядом»</a>
+                    <a href="#" class="text" data-clamp>Обновленную Skoda Octavia наделили «кристальным взглядом»</a>
                   </div>
 
                 </div>
